<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BTChannel</string>
    <string name="action_server">Server(AP)</string>
    <string name="action_client">Client(AP)</string>
    <string name="action_server2">Server</string>
    <string name="action_client2">Client</string>
    <string name="mode_server">Proxy Server(AP)</string>
    <string name="mode_client">Proxy Client(AP)</string>
    <string name="mode_server2">Proxy Server</string>
    <string name="mode_client2">Proxy Client</string>
    <string name="button_stop">STOP</string>
    <string name="button_start">START</string>
    <string name="ap_client_list">AP clients</string>
    <string name="vr_list">Virtual Resources</string>

    <string name="start_handshake">START_HANDSHAKE</string>
    <string name="ack_handshake">ACK_HANDSHAKE</string>
    <string name="end_handshake">END_HANDSHAKE</string>
    <string name="dummy">Dummy info</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>


</resources>
