<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_server"
        android:title="@string/action_server"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_client"
        android:title="@string/action_client"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_server2"
        android:title="@string/action_server2"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_client2"
        android:title="@string/action_client2"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
