<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    <TextView
        android:id="@+id/text1"
        android:text="@string/mode_server"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:padding="5pt"
        android:textColor="#ff6742ff" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"

        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:tag="send"
        android:text="@string/button_start" />

    </RelativeLayout>

    <TextView
        android:id="@+id/listtitle"
        android:text="@string/ap_client_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11pt"
        android:paddingTop="10pt"
        android:paddingBottom="5pt"
        android:textColor="#555" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/button1"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:orientation="vertical">
        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="18dp"

            android:scrollbars="vertical"
            android:gravity="bottom"
            android:text="-------Console-------\n"
            />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
